--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="./styles/main.css" />
+    <link rel="stylesheet" href="./styles/homepage.css" />
 </head>
 <body>
     <header>
@@ -25,8 +26,13 @@
                     <li>
                         <a href="./aboutus.html">About</a>
                     </li>
-                    <li>
-                        <a href="./crm">Products</a>
+                    <li id="dropdown">Products <i class="fas fa-angle-down"></i>
+                        <div id="dropdown-content">
+                            <a href="./workers-comp.html">Worker's Compensation</a>
+                            <a href="#">Business Insurance</a>
+                            <a href="#">Home Insurance</a>
+                            <a href="#">Commercial Auto Insurance</a>
+                        </div>
                     </li>
                     <li>
                         <a href="./become.html">Become an agent</a>
@@ -42,42 +48,7 @@
             </div>
         </nav>
     </header>
-    <!-- <header id="header">
-        <nav class="navbar navbar-expand-lg">
-            <a class="navbar-brand" href="/"><img src="" id="logo" /></a>
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon">
-                    <i id="hamburger" class="fas fa-bars"></i> 
-                    </span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav ml-auto">
-                    
-                    <li class="nav-item">
-                        <a href="./aboutus" class="nav-link" >Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="./careers" class="nav-link" >About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="./crm" class="nav-link" >Products</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="./contactus" class="nav-link" href="#"><i class="fab fa-facebook-f soc"></i></a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="./contactus" class="nav-link" href="#"><i class="fab fa-linkedin soc"></i></a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="./contactus" class="nav-link" href="#"><i class="fas fa-bars"></i> </a>
-                    </li>
-
-                </ul>
-            </div>
-        </nav>
-    </header> -->
     <section id="main">
         <div id="purple-bg">
             <div id="headline">
@@ -174,5 +145,6 @@
         </div>
         
     </footer>
+    <script src="./activity.js"></script>
 </body>
 </html>
