--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <!-- <li>
                         <a href="./contactus" href="#"><i class="fas fa-bars"></i> </a>
                     </li> -->
-                    <button class="quote-button">Get a Quote</button>
+                    <a href="./contact.html" id="quote-button">Get a Quote</a>
                 </ul>
             </div>
         </nav>
@@ -52,10 +52,7 @@
     <section id="main">
         <div id="purple-bg">
             <div id="headline">
-                <h1>A simple solution for Worker's Compensation.</h1>
-            </div>
-            <div class="sub-headline">
-                <h3>Choose between our powerful insurance products</h3>
+                <h1>A simple solution for your insurance needs.</h1>
             </div>
 
             <div id="four-col">
@@ -77,7 +74,7 @@
                 </div>
             </div>
             <div>
-                <button id="quote-button-white">Get a Quote Today</button>
+                <a href="./contact.html" id="quote-button-white">Get a Quote Today</a>
             </div>
         </div>
         <div class="sub-headline">
@@ -109,13 +106,13 @@
             <div>
                 <h2 style="color: #182FA5">Want to Learn More?</h2>
                 <p>As a leading firm in quality commercial insurance, see how SARK has successful led the industry for 10+ years by constantly working towards fulfilling the customer experience.</p>
-                <button class="blue-button">Learn more <i class="fas fa-angle-right"></i></button>
+                <a href="./contact.html" class="blue-button">Learn more <i class="fas fa-angle-right"></i></a>
             </div>
             <div>
                 <h2 style="color: #182FA5">Join the Team.</h2>
                 <img style="float: right; height: 120px"src="./happypeople3_edited.jpg" />
                 <p>Join SARK and be a part of a movement. Rapidly develop your career in a modern, growing company.</p>
-                <button class="blue-button">Be an agent <i class="fas fa-angle-right"></i></button>
+                <a href="./become.html" class="blue-button">Be an agent <i class="fas fa-angle-right"></i></a>
             </div>
         </div>
     </section>
@@ -132,7 +129,7 @@
                 <li><a href='./careers'>Become an Agent</a></li>
             </ul>
             <ul><h6>Products</h6>
-                <li><a href='./products'>Worker's Compensation</a></li>
+                <li><a href='./workers-comp.html'>Worker's Compensation</a></li>
                 <li><a href='./products'>Business Insurance</a></li>
                 <li><a href='./products'>Home Insurance</a></li>
                 <li><a href='./products'>Commercial Auto Insurance</a></li>
