--- a/bus-ins.html
+++ b/bus-ins.html
@@ -61,15 +61,19 @@
                 </div>
                 <div id="two-by-two">
                     <div>
+                        <img src="./icons/clipboard.png" />
                         <p>Medical expenses of a customer in the event of an accidental injury</p>
                     </div>
                     <div>
+                        <img src="./icons/shopping.png" />
                         <p>Payment for reimbursement of equipment and/or inventory</p>
                     </div>
                     <div>
+                        <img src="./icons/disaster.png" />
                         <p>Damages in the event of a natural disaster such as a fire, flood, or hurricane</p>
                     </div>
                     <div>
+                        <img src="./icons/handshake.png" />
                         <p>You may also extend life and health insurance to your employees</p>
                     </div>
                 </div>
