--- a/comm-auto.html
+++ b/comm-auto.html
@@ -61,12 +61,15 @@
                 </div>
                 <div id="three-row">
                     <div>
+                        <img src="./icons/folder.png" alt="">
                         <p>Medical payments and liabilities in the event of an accident</p>
                     </div>
                     <div>
+                        <img src="./icons/towtruck.png" alt="">
                         <p>Expenses in the event of theft of or damage to vehicles</p>
                     </div>
                     <div>
+                        <img src="./icons/screen.png" alt="">
                         <p>Legal expenses and coverage of uninsured motorists</p>
                     </div>
                 </div>
