--- a/contact.html
+++ b/contact.html
@@ -54,12 +54,12 @@
         <div id="blue-bg">
             <div id="two-col">
                 <div>
-                    <h2>Get a quote</h2>
-                    <h4>Please answer these questions, and we'll get back to you ASAP.</h4>
-                    <p>Alternatively, you can send us an email or text to these numbers...</p>
+                    <h2><b>Get a quote</b></h2>
+                    <h4><b>Please answer these questions, and we'll get back to you ASAP.</b></h4>
+                    <p><b>Alternatively, you can send us an email or text to these numbers...</b></p>
                     <p>wc@sarkinsurance.com</p>
                 </div>
-                <div>
+                <div id="white-block">
                     <form>
                         <input type="text" name="name" placeholder="Name">
                         <input type="text" name="email" placeholder="Email">
