--- a/home-ins.html
+++ b/home-ins.html
@@ -60,12 +60,15 @@
                 </div>
                 <div id="three-row">
                     <div>
+                        <img src="./icons/screen.png" alt="">
                         <p>Replacement of personal property in the event of damage or theft </p>
                     </div>
                     <div>
+                        <img src="./icons/clipboard.png" alt="">
                         <p>Coverage of medical expenses should a guest be injured while visiting your home</p>
                     </div>
                     <div>
+                        <img src="./icons/schedule.png" alt="">
                         <p>Payment of hotel bills and other expenses should your home be rendered unlivable by fire or other hazard</p>
                     </div>
                 </div>
