--- a/workers-comp.html
+++ b/workers-comp.html
@@ -62,15 +62,21 @@
             <p>An insurance policy that protects your employees in case they ever get sick or injured because of work. The policy pays out to cover your employee’s medical expenses and lost wages—and it might even cover ongoing financial and medical support if the injury is serious.</p>
             <div id="three-col">
                 <div class="square">
-                    <i></i>
+                    <div class="icon">
+                        <img src="./icons/medical.png" alt="">
+                    </div>
                     <p>Pay medical expenses for workers who get hurt on the job.</p>
                 </div>
                 <div class="square">
-                    <i></i>
+                    <div class="icon">
+                        <img src="./icons/work.png" alt="">
+                    </div>
                     <p>Pay for the missing wages of employees when they get injured.</p>
                 </div>
                 <div class="square">
-                    <i></i>
+                    <div class="icon">
+                        <img src="./icons/legal.png" alt="">
+                    </div>
                     <p>Protect yourself against lawsuits and legal fees.</p>
                 </div>
             </div>
