all-products page added

--- a/become.html
+++ b/become.html
@@ -52,9 +52,15 @@
 
     <section >
         <section id="full-width">
+            <h2>Want to join the team?</h2>
+            <h2>Become an agent today!</h2>
             <div id="two-col">
                 <div>
-                    <h2>Want to join the team?</h2>
+                    <ul>
+                        <li>No membership required</li>
+                        <li>Be approved in <span class="accent">ONE</span> business day</li>
+                        <li><span class="accent">FOUR</span> click process</li>
+                    </ul>
                     <img src=""/>
                 </div>
                 <div class="white-card">
@@ -71,9 +77,53 @@
                     </form>
                 </div>
             </div>
-            <div><h2>Why join SARK?</h2></div>
-        </section>
 
+        </section>
+        <div id="drop-tab"><h2>Why join SARK?</h2></div>
+        <div id="perfect-partner">
+            <h2>The perfect partner</h2>
+            <p>If you’re an independent agent trying to navigate the modern commerical insurance landscape — SARK could be the partner you’ve been looking for.</p>
+        </div>
+        <div class="two-col-b">
+            <div>
+                <p>They say data is the oil of the 21st century. For the past ten years, we have been collecting data from dozens of resources, analyzing it, and providing our agents with only the best clients for insurance sales. </p>
+                <div id="three-col">
+                    <div class="blue-circle">
+                        <h6>2,000,000+ leads</h6>
+                    </div>
+                    <div class="blue-circle">
+                        <h6>AI-powered ranking</h6>
+                    </div>
+                    <div class="blue-circle">
+                        <h6>New clients in &lt;6 minutes</h6>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <h2>Data, and lots of it</h2>
+                <img src="./datascreen.jpg" alt="" />
+            </div>
+        </div>
+        <div>
+            <h2>Free software dedicated to your needs.</h2>
+            <div class="two-col-b">
+                <div>
+                    <img src="./datascreen2.jpg" alt="" />
+                </div>
+                <div>
+                    <p>Sales is hard. Managing 1,000 + clients without software? Very hard.</p>
+                    <p>Luckily, SARK provides an inbuilt solution for retrieving, managing, and validating all of your clients. We introduce...</p>
+                    <h3>SARK Move.</h3>
+                    <img src ="./iconset.png" />
+                </div>
+            </div>
+        </div>
+        <div>
+            <h2>Expert guidance under an experienced coach.</h2>
+            <p>As an up and coming agent, SARK will work with you personally to hone your abilities to a fine edge.</p>
+            <p>Work directly with your dedicated mentor to help you accurately configure the geographies and risk profiles that align with your goals.</p>
+            <img src="Office_Meeting.jpg" />
+        </div>
     </section>
             
     <footer>
