--- a/index.html
+++ b/index.html
@@ -40,12 +40,10 @@
                     <li>
                         <a href="./contactus" ><i class="fab fa-facebook-f"></i>&nbsp; &nbsp; &nbsp;<i class="fab fa-linkedin"></i></a>
                     </li>
-                    <!-- <li>
-                        <a href="./contactus" href="#"><i class="fas fa-bars"></i> </a>
-                    </li> -->
                     <a href="./contact.html" class="quote-button" style="color:white">Get a Quote</a>
                 </ul>
             </div>
+            <a  href="./contactus" href="#"><i id="hamburger" class="fas fa-bars"></i> </a>
         </nav>
     </header>
 
