adds some media queries

--- a/aboutus.html
+++ b/aboutus.html
@@ -87,7 +87,7 @@
                 <img src='./partners/markel.png'/>
                 <img src='./partners/pie.png'/>
                 <img src='./partners/zurich.png'/>
-                <img style="width: 150px" src='./partners/employers.png'/>
+                <img src='./partners/employers.png'/>
                 <img src='./partners/greatamerican.png'/>
             </div>
             <div class="blue-block"><h2>A commitment to service</h2></div>
