--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li>
                         <a href="./aboutus.html">About</a>
                     </li>
-                    <li id="dropdown">Products <i class="fas fa-angle-down"></i>
+                    <li id="dropdown"><a href="./all-products.html">Products</a><i class="fas fa-angle-down"></i>
                         <div id="dropdown-content">
                             <a href="./workers-comp.html">Worker's Compensation</a>
                             <a href="./bus-ins.html">Business Insurance</a>
@@ -43,7 +43,9 @@
                     <a href="./contact.html" class="quote-button" style="color:white">Get a Quote</a>
                 </ul>
             </div>
-            <a  href="./contactus" href="#"><i id="hamburger" class="fas fa-bars"></i> </a>
+            <div id="hamburger">
+                <a href="./contactus" href="#"><i  class="fas fa-bars"></i> </a>
+            </div>
         </nav>
     </header>
 
